--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -58,6 +58,7 @@
 	.main-info-right{width:100%;margin-top:16px}
 	.more-link-area{flex-direction:row;flex-wrap:wrap;row-gap:16px;column-gap:16px;justify-content:space-between}
 	.more-link-area > a{width:auto;flex:1 0 calc(50% - 16px);min-height:110px}
+	.more-link-login .letter-spacing-10 {letter-spacing: inherit;}
 
 	/* 평생교육 상담센터 */
 	.main-counseling .main-tit-group{flex-direction:column;align-items:flex-start}
@@ -105,8 +106,9 @@
 
 	.conts-header .select-view select {
 		/* width: 104px;  */
+		padding: 7.5px 8px;
 		padding-right: 35px;
-		font-size: var(--font-lv7);
+		font-size: 14px;
 		background-position: right 8px center;
 	}
 	.conts-header .search-areaa {
@@ -115,6 +117,7 @@
 		gap: 10px;
 		width: 100%;
 		padding: 12px 10px;
+		font-size: 18px;
 		background-color: var(--bg-color);
 		border-radius: 8px;
 		overflow: hidden;
@@ -127,8 +130,7 @@
 		width: 100%;
 	}
 	.conts-header .search-areaa .search-input button {
-		
-		max-height: 40px;
+		width: 24px; height: 24px;
 		padding: 0;
 		background-size: 100% auto;
 	}
@@ -189,19 +191,19 @@
 		flex: 1 1 auto;
 	}
 	.step-list .step .step-icon {
-		/* max-width: 82px; height: 82px; */
-		max-width: 148px; max-height: 148px;
-		width: 100%; height: 100%;
+		max-width: 82px; height: 82px;
+		/* max-width: 148px; max-height: 148px; */
+		/* width: 100%; height: 100%; */
 		background-size: 50%;
 		object-fit: cover;
-		height: 0;
-		padding-top: 100%; /* calc (이미지 높이 ÷ 이미지 가로 × 100 %) */
+		/* height: 0; */
+		padding-top: 0;
 	}
 	.step-list .step .step-name{font-size:15px}
 	.step-list .step .step-tit{font-size:18px}
 	.step-list li.step-arrow {
 		width: 24px;
-		margin-top: 15%;
+		margin-top: 7%;
 	}
 	.step-list .step-arrow img {
 		display: block;
@@ -356,6 +358,7 @@
 	/* PC 전용 콘텐츠 */
 	.lg-only{display:none}
 	.lg-only-i{display:none!important}
+	.lg-only-inline {display: none;}
 
 	/* 모바일 전용 콘텐츠 */
 	.sm-show-800{display:block !important}
@@ -364,7 +367,7 @@
 	.main-cont{padding:0}
 	.main-cont::before{display:none}
 	.main-info-link.personal{padding:9px 16px}
-	.main-info-link.personal .main-info-user{font-size:16px}
+	.main-info-link.personal .main-info-user{font-size:16px; margin-bottom: 8px;}
 	.main-info-group{margin-top:0}
 	.main-info-tit{line-height:150%;font-size:22px}
 	.main-info-link{height:auto}
@@ -372,11 +375,10 @@
 	.main-info-mo-wrap{flex-direction:column;gap:16px}
 	.main-info-mo-wrap .main-info-link{width:100%}
 	.main-info-mo-wrap > .main-info-link + .main-info-link{margin-left:0}
-	.main-info-link:not(.personal){padding:16px}
-	.main-info-link:not(.personal) > a{justify-content:space-between;align-items:flex-start;position:relative}
-	.main-info-link:not(.personal) > a .ico{position:absolute;right:0px;top:0px}
-	.main-info-link.apply-ticket > a .ico{padding-top:8px}
-	.main-info-link:not(.personal) > a .ico::before{width:40px;height:40px}
+	.main-info-link:not(.personal){ padding:16px; flex: 1;}
+	.main-info-link:not(.personal) > a{ justify-content: center; align-items:flex-start;position:relative}
+	.main-info-link:not(.personal) > a .ico{position:absolute; right:0px;}
+	.main-info-link:not(.personal) > a .ico::before{width:60px; height:60px}
 	.main-info-group{text-align:left}
 	.main-info-link.personal{justify-content:center}
 	.main-info-link.personal .ico.after-login::before{width:88px;height:88px}
@@ -388,7 +390,7 @@
 	.main-notice .main-notice-detail .swiper-indicator{display:flex}	
 	.main-info-wrap{position:relative;padding:40px 0}
 	.main-info-wrap::before{content:'';display:block;position:absolute;left:0;top:0;height:100%;width:100vw;margin-left:calc(-50vw + 50%);background:#27C2CB;z-index:-1}
-	.more-link-area > a{border:1px solid #c5c5c5;padding:16px;font-size:18px;align-items:flex-start;position:relative}
+	.more-link-area > a{ border:1px solid var(--bd-color); padding:16px;font-size:18px;align-items:flex-start;position:relative}
 	.more-link-area > a .ico{position:absolute;right:14px;bottom:14px}
 	.more-link-one{line-height:54px}
 	.main-info-right .more-link-area > a .ico::before{width:40px;height:40px}
@@ -398,7 +400,7 @@
 
 	/* 레이어 팝업 공통 */
 	.layer-pop .layer-content{padding:0 20px}
-	.layer-pop .layer-content .layer-scroll {padding: 48px 16px 32px 16px;}
+	.layer-pop .layer-content .layer-scroll {padding: 48px 16px;}
 
 	/* 레이어 내부 동의 박스 공통 */
 	.layer-pop .layer-agree-box {border-radius: 16px;}
@@ -430,8 +432,8 @@
 	.main-search-box > select{min-width:0;width:112px;font-size:18px;padding:0 32px 0px 8px;background-position:right 8px center} 
 	.main-search-box button{width:50px;font-weight:500;font-size:18px;border-radius:6px}
 	.main-counseling{padding:60px 0 16px 0}
-	.main-counseling-card{padding:16px 16px 14px 16px;align-items:flex-start;width:100%;position:relative}
-	.main-counseling-ico{ position:absolute;right:16px;top:16px}
+	.main-counseling-card{padding:16px 16px 14px 16px; align-items:flex-start; width:100%; position:relative; border-radius: 16px;}
+	.main-counseling-ico{ position:absolute; right:16px; top:16px}
 	.main-counseling-card > .card-wrap{flex-direction:column;gap:8px;align-items:flex-start;max-height:none}
 	.main-counseling-card .main-counseling-label{font-size:18px;height:auto;padding:8px 12px}
 	.main-counseling-ico > a{width:40px;height:40px}
